--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-fontawesome": "^1.7.1",
-    "react-icons": "^5.4.0"
+    "react-icons": "^5.4.0",
+    "socket.io-client": "^4.8.1"
   }
 }
